--- a/bibliography.bib
+++ b/bibliography.bib
@@ -77,6 +77,23 @@
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
+@article{DBLP:journals/csur/MernikHS05,
+  author       = {Marjan Mernik and
+                  Jan Heering and
+                  Anthony M. Sloane},
+  title        = {When and how to develop domain-specific languages},
+  journal      = {{ACM} Comput. Surv.},
+  volume       = {37},
+  number       = {4},
+  pages        = {316--344},
+  year         = {2005},
+  url          = {https://doi.org/10.1145/1118890.1118892},
+  doi          = {10.1145/1118890.1118892},
+  timestamp    = {Wed, 14 Nov 2018 10:31:46 +0100},
+  biburl       = {https://dblp.org/rec/journals/csur/MernikHS05.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
 @article{DBLP:journals/queue/Thomson21,
   author       = {Patrick Thomson},
   title        = {Static Analysis: An Introduction: The fundamental challenge of software
